# MCP-India-Stack

./: .env.example  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CODEOWNERS  CONTRIBUTING.md  LICENSE  NOTICES  README.md  SECURITY.md  SETUP.md  check_coverage.py  coverage.json  pip_log.txt  pyproject.toml  pytest.ini  render.yaml  smithery.yaml  telemetry.jsonl
.github/ISSUE_TEMPLATE/: bug_report.md  data_update.md  tool_request.md
.github/workflows/: ci.yml  publish.yml
data/: dataset_checksums.json  validation_report.md
docs/: index.html  prompts.md  resources.md
docs/.well-known/mcp/: server-card.json
docs/tools/: aadhaar.md  advance_tax.md  bank.md  bbps.md  capital_gains.md  cin.md  digilocker.md  din.md  driving_license.md  epf.md  esic.md  fssai.md  gst_calculator.md  gstin.md  hra.md  hsn.md  ifsc.md  income_tax.md  pan.md  passport.md  pincode.md  state_code.md  surcharge.md  tds.md  upi.md  voter_id.md
docs/workflows/: invoice_audit.md  salary_planner.md  vendor_kyc.md
scripts/: update_datasets.py
src/mcp_india_stack/: __init__.py  __main__.py  database.py  normalization.py  permission_tiers.py  server.py  telemetry.py
src/mcp_india_stack/tools/: __init__.py  aadhaar.py  advance_tax.py  bbps.py  capital_gains.py  cin.py  din.py  driving_license.py  fssai.py  gst_calculator.py  gstin.py  hra.py  hsn.py  ifsc.py  income_tax.py  pan.py  passport.py  pincode.py  state_code.py  surcharge.py  tds.py  (+2 more)
tests/: conftest.py  test_calculate_gst.py  test_calculate_income_tax.py  test_calculate_surcharge.py  test_calculate_tds.py  test_gstin.py  test_hra.py  test_hsn.py  test_ifsc.py  test_main_entrypoint.py  test_new_modules.py  test_pan.py  test_pincode.py  test_regression_fixtures.py  test_server.py  test_server_error_handlers.py  test_server_protocol.py  test_state_code.py  test_updater.py  test_upi.py  test_validate_aadhaar.py  test_validate_cin.py  test_validate_din.py  test_validate_driving_license.py  test_validate_passport.py  test_validate_voter_id.py
tests/fixtures/: gstin_cases.json  ifsc_cases.json  pan_cases.json  upi_cases.json
(+8 files in other folders)
